fixed layout issue for skills

--- a/src/components/styles/Skills.css
+++ b/src/components/styles/Skills.css
@@ -1,18 +1,22 @@
-.skill-list1 {
-    flex-direction: row;
+.skills-section {
+    display: flex;
+    flex-direction: column;
+    color: white;
 }
 
-.skill-list2 {
+.skills-list {
+    display: flex;
     flex-direction: row;
-}
-
-.skill-list13 {
-    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    padding: 1rem;
 }
 
 .skill-img {
-    width: 10%;
-    padding: 1%;
-    border: 2px solid blue;
+    margin-right: 1rem;
+    height: 4em;
+    width: 4.2em;
     border-radius: 15px;
+    border: 2px solid blue;
+    padding: 10%;
 }
